# Conversational-Repertoire

./: .gitignore  README.md  package-lock.json  package.json
backend/: main.py  pyproject.toml  requirements.txt  vercel.json
backend/model/: plan.py  target.py
backend/service/: client.py  prompt.py
backend/web_api/: make_plan.py  test_router.py
frontend/: package-lock.json  package.json  tailwind.config.cjs
frontend/.svelte-kit/: ambient.d.ts
frontend/src/lib/: Dashboard.svelte  dashboard.svelte  loader.css  loader.ts  types.ts
frontend/src/routes/: +page.svelte
src/routes/: +page.svelte
