[tool.poetry]
name = "web-api"
version = "0.1.0"
description = ""
authors = ["khang <aslka126@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
httpx = "^0.25.1"
langchain = "^0.0.331"
python-dotenv = "^1.0.0"
httpie = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
